models built success

--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -16,8 +16,8 @@ clean-targets:
 
 models:
   my_dbt_project:  
-    staging:
-      +materialized: view  
+    # staging:
+    #   +materialized: view  
     mart:
       +materialized: table  
     raw:
